# ImageRicer

./: README.md  pyproject.toml  pyrightconfig.json  requirements.txt
imagericer/: cli.py  main.py
imagericer/palette/: DUCK.txt  SHIP.txt  SPACE.txt
imagericer/utils/: converter.py  imageloader.py
